samples/_failures_safe/1761502273_561122_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51c7cc15.c: In function ‘main’:
./samples/SAFE/__tmp_51c7cc15.c:125: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_51c7cc15.c:124:29: note: to match this ‘(’
  124 |             cols2 = read_int("Enter columns for second matrix (1-10): ", 1, MAX_DIM
      |                             ^
./samples/SAFE/__tmp_51c7cc15.c:124:13: error: expected declaration or statement at end of input
  124 |             cols2 = read_int("Enter columns for second matrix (1-10): ", 1, MAX_DIM
      |             ^~~~~
./samples/SAFE/__tmp_51c7cc15.c:124:13: error: expected declaration or statement at end of input
